<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_tv_time"
            android:layout_marginBottom="5dp"
            android:id="@+id/tv_time_work"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_tv_title"
            android:layout_marginBottom="5dp"
            android:id="@+id/tv_title_work"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/work_tv_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/tv_content_work"/>

    </LinearLayout>

</android.support.v7.widget.CardView>