<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work_tv_time" />

        <EditText
            android:id="@+id/work_et_time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/work_tv_time"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work_tv_title" />

        <EditText
            android:id="@+id/work_et_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/work_tv_title"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work_tv_content" />

        <EditText
            android:id="@+id/work_et_content"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:hint="@string/work_tv_content"
            android:background="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/work_btn_submit"
            android:layout_gravity="right"
            android:id="@+id/btn_submit"/>

    </LinearLayout>

</LinearLayout>