<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:src="@mipmap/ic_launcher"/>


        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/md_white_1000"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                <TextView
                        android:id="@+id/tv_account_login"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/login_tv_account"/>

                <EditText
                        android:id="@+id/et_account_login"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@null"
                        android:textSize="17sp"
                        android:hint="@string/login_tv_account"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/md_grey_400"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal">

                <TextView
                        android:id="@+id/tv_pass_login"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/login_tv_pass"/>

                <EditText
                        android:id="@+id/et_pass_login"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="4"
                        android:background="@null"
                        android:textSize="17sp"
                        android:hint="@string/login_tv_pass"/>

            </LinearLayout>

            <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/md_grey_400"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"/>

            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:gravity="center">

                <RadioButton
                        android:id="@+id/rb_select_user_login"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_600"
                        android:text="@string/login_rb_user"/>

                <RadioButton
                        android:id="@+id/rb_select_manager_login"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:textColor="@color/md_grey_600"
                        android:text="@string/login_rb_manager"/>

            </RadioGroup>


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_margin="20dp">

                <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:background="@color/md_blue_400"
                        android:textColor="@color/md_white_1000"
                        android:text="@string/login_btn_login"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>