<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:id="@+id/cv_me_one"
                                    android:layout_width="match_parent"
                                    android:layout_height="80dp"
                                    android:layout_marginLeft="16dp"
                                    android:layout_marginRight="16dp"
                                    android:layout_marginTop="140dp"
                                    android:background="@color/md_white_1000"
                                    android:elevation="3dp">

    <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <RelativeLayout
                android:id="@+id/rl_life_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/iv_file_time"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:src="@mipmap/up_card"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/play_up_card"
                    android:textColor="@color/md_grey_500"
                    android:textSize="12sp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_life_recommend_book"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/iv_book_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:src="@mipmap/down_card"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/play_down_card"
                    android:textColor="@color/md_grey_500"
                    android:textSize="12sp"/>

        </RelativeLayout>


        <RelativeLayout
                android:id="@+id/rl_life_recommend_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/iv_style_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:src="@mipmap/overtime"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/play_overtime"
                    android:textColor="@color/md_grey_500"
                    android:textSize="12sp"/>

        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/rl_life_recommend_view"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

            <ImageView
                    android:id="@+id/iv_view_name"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="6dp"
                    android:src="@mipmap/overtime_stop"/>


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="4dp"
                    android:text="@string/play_overtime_stop"
                    android:textColor="@color/md_grey_500"
                    android:textSize="12sp"/>

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>